fix modal shift

--- a/web/app/globals.css
+++ b/web/app/globals.css
@@ -101,3 +101,13 @@
     @apply px-0;
   }
 }
+
+/* Prevent layout shift on Dialog */
+html {
+  overflow-y: scroll;
+}
+body {
+  width: 100vw;
+  overflow-x: hidden;
+  padding-right: calc(0 - var(--removed-body-scroll-bar-size)) !important;
+}
